# malibu

./: .gitignore  CMakeLists.txt  CMakeSettings.json  milestones.txt  premake5.lua  project.txt  prototype.txt  todo.txt
assets/: box.fbx  human_head.fbx
res/: box.fbx  broken_mesh.FBX
src/: CMakeLists.txt
src/programs/: premake5.lua
src/programs/game/: CMakeLists.txt  game.cpp  premake5.lua
src/programs/hello_world/: hello_world.cpp  premake5.lua
src/runtime/: CMakeLists.txt  premake5.lua
src/runtime/asset/: asset.cpp  asset.hpp  premake5.lua
src/runtime/core/: CMakeLists.txt  core.hpp  fiber.hpp  fs.cpp  fs.hpp  library.hpp  math.hpp  memory.cpp  memory.hpp  minimal.hpp  premake5.lua  primitives.hpp  thread.hpp  time.cpp  time.hpp  type_traits.hpp  types.hpp  uuid.hpp  win32.hpp  win32_fiber.cpp  win32_fs.cpp  win32_library.cpp  win32_thread.cpp  win32_time.cpp  win32_window.cpp  window.hpp
src/runtime/core/async/: atomic.hpp  fiber.hpp  job.cpp  job.hpp  mpmc.hpp  mutex.hpp  thread.hpp  win32_fiber.cpp  win32_thread.cpp
src/runtime/core/containers/: array.hpp  bitflag.hpp  function.hpp  hash.hpp  hash_map.hpp  non_null.hpp  option.hpp  result.hpp  shared_ref.hpp  slice.hpp  string.cpp  string.hpp  string_view.cpp  string_view.hpp  unique.hpp  wstring.cpp  wstring.hpp  wstring_view.hpp
src/runtime/core/math/: aabb2.hpp  color.cpp  color.hpp  mat3.hpp  mat4.hpp  math.hpp  math_utility.cpp  math_utility.hpp  quat.hpp  utility.cpp  utility.hpp  vec2.hpp  vec3.hpp  vec4.hpp
src/runtime/core/platform/: win32_window.cpp  window.hpp
src/runtime/core/platform/win32/: win32_window.cpp
src/runtime/core/sync/: atomics.hpp  mutex.hpp
src/runtime/core/templates/: decay.hpp  enable_if.hpp  invoke.hpp  is_constructible.hpp  is_invocable.hpp  method_outer.hpp  remove_cv.hpp  remove_reference.hpp  type_traits.hpp
src/runtime/draw/: basic_shapes.cpp  basic_shapes.hpp  canvas.hpp  font.cpp  font.hpp  premake5.lua  shape.cpp  shape.hpp  text.cpp  text.hpp
src/runtime/draw2d/: basic_shapes.cpp  basic_shapes.hpp  canvas.hpp  draw2d.hpp  font.cpp  font.hpp  premake5.lua  shape.hpp
src/runtime/engine/: premake5.lua
src/runtime/gpu/: CMakeLists.txt  command_list.cpp  command_list.hpp  context.cpp  context.hpp  interface.hpp  minimal.hpp  pipelines.cpp  pipelines.hpp  premake5.lua  resources.cpp  resources.hpp  swapchain.cpp  swapchain.hpp
src/runtime/gpu/d3d12/: d3d12_command_list.cpp  d3d12_command_list.hpp  d3d12_context.cpp  d3d12_context.hpp  d3d12_pipelines.cpp  d3d12_pipelines.hpp  d3d12_resources.cpp  d3d12_resources.hpp  d3d12_swapchain.cpp  d3d12_swapchain.hpp  d3d12_utility.hpp
src/runtime/gpu/dx12/: dx12_command_list.cpp  dx12_command_list.hpp  dx12_context.cpp  dx12_context.hpp  dx12_pipelines.cpp  dx12_pipelines.hpp  dx12_resources.cpp  dx12_resources.hpp  dx12_utility.hpp
src/runtime/gui/: button.hpp  button_element.hpp  compound.cpp  compound.hpp  compound_element.cpp  compound_element.hpp  element.cpp  element.hpp  gui.cpp  gui.hpp  image.cpp  image.hpp  image_element.cpp  image_element.hpp  list.cpp  list.hpp  list_element.cpp  list_element.hpp  overlap.cpp  overlap.hpp  overlap_element.cpp  overlap_element.hpp  premake5.lua  text.cpp  text.hpp  text_element.cpp  text_element.hpp  widget.cpp  widget.hpp  win32_window.cpp  window.cpp  window.hpp
src/runtime/resources/: manager.cpp  manager.hpp  premake5.lua  resource.hpp
src/shaders/: debug3d.hlsl  gui.hlsl  resources.hlsl  static_lit.hlsl  triangle.hlsl
